Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-514

Malformed RowIndex stream meta exception when read statistics from stripe with bloom filter

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • None
    • 1.6.0
    • C++
    • None

    Description

      ReaderImpl::getRowIndexStatistics has the following assert:

      if (offset + length > indexEnd) {
        throw ParseError
      

      where indexEnd is stripeInfo.indexlength(),
      but it doesn't include size of bloomfilter stream.

      Attachments

        Issue Links

          Activity

            People

              rip.nsk@gmail.com Renat Valiullin
              rip.nsk@gmail.com Renat Valiullin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m