ORC-514: [C++] Malformed RowIndex stream meta exception when read statistics from stripe with bloom filter

This fixes #399